# ShokkerPaintBooth

./: .editorconfig  .gitignore  .prettierrc.json  ALPHA_README.md  ARCHITECTURE.md  CHANGELOG.md  CLEANUP_DECISION_NEEDED.md  CLEANUP_LOG.md  CLEANUP_ROOT_JUNK.bat  CLEANUP_ROOT_JUNK_PREVIEW.bat  CLEAN_START.bat  CODE_OF_CONDUCT.md  COLOR_SHIFT_GUIDE.md  CONTRIBUTING.md  CURSOR_TASK_IMAGE_PATTERN_PIPELINE.md  EXPANSION_MASTER.md  FINISH_AUDIT.md  HANDOFF_2026-03-13.md  HERMES.md  HERMES_ONBOARDING.md  IMPLEMENTATION_PROGRESS.md  KNOWLEDGE_BASE.md  LICENSE.txt  OPEN_ISSUES.md  OVERNIGHT_LOG.md  OVERNIGHT_QUEUE.md  PAINT_EFFECTS_FIX_GUIDE.md  PRIORITIES.md  PROJECT_HANDOFF.md  README.md  README_V5.md  REGISTRY_HEALTH.txt  RESEARCH.md  RESEARCH_REFERENCE.md  ROADMAP.md  SECURITY.md  SHOKKER_BIBLE.md  SHOKKER_GALLERY_THE_CAN.md  START_PAINT_BOOTH.bat  START_SERVER.bat  (+118 more)
decals/: README.md  contingency_stacks.json  number_panels.json  safety_required.json  series_logos.json  sponsor_blocks.json
docs/: 01-ARCHITECTURE.md  02-PBR-SYSTEM.md  03-ENGINE.md  04-SERVER-API.md  05-UI-SYSTEMS.md  06-FEATURES.md  07-KNOWN-ISSUES.md  ADD_CUSTOM_IMAGE_PATTERNS.md  ADD_REMOVE_FINISH.md  ARCHITECTURE.md  AUDIT_PREMIUM_LUXURY_BASES.md  AUDIT_RACING_HERITAGE_SATIN_WRAP.md  BUILD.md  CANVAS_TOOLS_ANALYSIS.md  CHEATSHEET.md  CLAUDE_PATTERN_UPGRADE_PROMPT.md  COMMAND_SURFACE_MATRIX.md  CONVENTIONS.md  DEBUGGING.md  DEVELOPMENT.md  DIAGNOSTICS.md  FAQ_Base_Overlay_Blend_Modes.md  FAQ_DEV.md  GLOSSARY.md  HARDMODE_AUTONOMOUS_FINAL_SUMMARY.md  HARDMODE_AUTONOMOUS_WORKLOG.md  HEENAN_FAMILY_5H_OVERNIGHT_FINAL_SUMMARY.md  HEENAN_FAMILY_5H_OVERNIGHT_WORKLOG.md  HEENAN_FAMILY_6H_ALPHA_HARDENING_FINAL_SUMMARY_2026_04_23.md  HEENAN_FAMILY_6H_ALPHA_HARDENING_WORKLOG_2026_04_23.md  HEENAN_FAMILY_BOARD_MEETING_2026_04_19.md  HEENAN_FAMILY_FOUNDATION_TRUST_OVERNIGHT_FINAL_SUMMARY.md  HEENAN_FAMILY_FOUNDATION_TRUST_OVERNIGHT_WORKLOG.md  HEENAN_FAMILY_OVERNIGHT_MASTER_BRIEF.md  MIGRATION_TEMPLATE.md  NON_SOURCE_OVER_BEHAVIOR.md  ONBOARDING.md  PAINT_IN_SPB_IMPLEMENTATION_PLAN.md  PATTERNS_DEEP_DIVE_ANALYSIS.md  PATTERN_COOKBOOK.md  (+24 more)
docs/health-reports/: REGISTRY_CONFLICTS.md
docs/heenan-family/: FAMILY_INTELLIGENCE.md  HOW_TO_BRIEF_THE_FAMILY.md  MASTER_HEENAN_FAMILY.md  STARTER_KIT.md  agent-animal.md  agent-bockwinkel.md  agent-flair.md  agent-hawk.md  agent-heenan.md  agent-hennig.md  agent-luger.md  agent-pillman.md  agent-raven.md  agent-sting.md  agent-street.md  agent-windham.md
electron-app/: BUILD.md  copy-server-assets.js  license-preload.js  license.html  main.js  package-lock.json  package.json  preload.js  rebuild.bat
electron-app/server/: _ui_finish_data.js  config.py  paint-booth-0-finish-data.js  paint-booth-0-finish-metadata.js  paint-booth-1-data.js  paint-booth-2-state-zones.js  paint-booth-3-canvas.js  paint-booth-4-pattern-renderer.js  paint-booth-5-api-render.js  paint-booth-6-ui-boot.js  paint-booth-7-shokk.js  paint-booth-pro-theme.css  paint-booth-v2.css  paint-booth-v2.html  paint-booth.html  rebuild_thumbnails.py  server.py  server_v5.py  shokker_engine_v2.py  swatch-upgrades-3.js  swatch-upgrades.js
engine/: arsenal.py  base_registry_data.py  chameleon.py  color_shift.py  compose.py  core.py  dual_color_shift.py  expansion_patterns.py  finishes.py  gpu.py  micro_flake_shift.py  perceptual_color_shift.py  prizm.py  registry.py  render.py  shokk_series.py  spec_paint.py  spec_patterns.py
engine/expansions/: arsenal_24k.py  atelier.py  color_clash.py  color_monolithics.py  damage_wear_v2.py  fusions.py  paradigm.py
engine/paint_v2/: brushed_directional.py  candy_special.py  carbon_composite.py  ceramic_glass.py  chrome_mirror.py  exotic_metal.py  finish_basic.py  (+12 more)
fonts/: README.md  font_presets.json
helmets/: README.md  catalog.json  styles.json
inspiration/: README.md  design_patterns.json  iconic_liveries.md
leagues/: README.md  league_template_config.json
psd_templates/: README.md  catalog.json  chevy_silverado_2019.json  ford_f150_2021.json  generic_gt3.json  generic_lmp.json  generic_stock_car.json  toyota_tundra_2022.json
recipes/: README.md  boardtrack_era.json  candy_lowrider.json  chrome_show_car.json  classic_euro_gt.json  dirt_late_model.json  drift_wrap.json  formula_drift_pro.json  formula_vee_classic.json  gt3_modern.json  hologram_chameleon.json  indycar_gp.json  japanese_bosozoku.json  jdm_import_tuner.json  karting_sprint.json  lmp_prototype.json  lowrider_candy.json  modern_stealth_fighter.json  muscle_car_stripe.json  nascar_classic.json  rally_cross_mud.json  rally_weathered.json  rat_rod_patina.json  restomod_pro_street.json  retro_outrun.json  rolling_smoke_burnout.json  show_car_concours.json  sports_car_touring.json  stealth_matte.json  tribute_legends.json  vintage_70s_f1.json
scripts/: README.md  RUNTIME_SYNC.md  audit_pattern_quality.py  audit_spec_pattern_quality.py  bake_pattern_thumbnails.bat  bake_pattern_thumbnails.sh  build_special_groups.py  cleanup-root-temp-junk.py  export_finish_ids.py  extract_finish_colors.py  extract_spec_paint.py  finish_visual_audit.py  import_abstract_experimental_patterns.py  list_patterns_by_category.py  mono_ids_backend.txt  remove_cs_block.py  remove_spec_paint_block.py  runtime-sync-manifest.json  special_groups_output.js  split_engine.py  sync-runtime-copies.js  validate_registry.py
suits/: README.md  catalog.json  styles.json
tests/: README.md  conftest.py  eyedropper_toolbar_dock_test.py  regression_pattern_perf_budget_test.py  server_registry_boot_test.py  smoke_test.py  test_regression_dev_qol_tools.py  test_regression_high_detail_specials.py  test_regression_runtime_mirror_coverage.py  zone9_matte_carbon_guard_test.py
text_templates/: README.md  contingency_stack.json  driver_name.json  racing_number.json  sponsor_block.json  team_logo.json
tutorials/: 01_first_livery.md  02_layer_basics.md  03_zones_explained.md  04_finishes_deep_dive.md  05_spec_map_mastery.md  06_sponsor_placement.md  07_layer_effects.md  08_recipe_workflow.md  09_advanced_tools.md  10_render_export.md  README.md
(+162 files in other folders)
